fixed alignment bug css/scss, reduced media qs

--- a/.Scribe/src/components/header/header.css
+++ b/.Scribe/src/components/header/header.css
@@ -33,7 +33,7 @@
 /* Media Queries */
 @media screen and (max-width: 350px) {
   .header__input-wrapper {
-    margin-top: -3rem;
+    margin-top: -1.5rem;
   }
   .header__input-wrapper input {
     background-color: white;
@@ -45,18 +45,13 @@
 }
 @media screen and (min-width: 350px) and (max-width: 410px) {
   .header__input-wrapper {
-    margin-top: -3rem;
+    margin-top: -1.75rem;
   }
-  .header__input-wrapper input {
+  input {
     background-color: white;
     font-size: 1.1rem;
     border: none;
     border-radius: 2rem;
     color: black;
-  }
-}
-@media screen and (min-width: 450px) and (max-width: 500px) {
-  .header__input-wrapper {
-    margin-top: -3.25rem;
   }
 }/*# sourceMappingURL=header.css.map */
